|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2004, PHP 5.1.0
- Moved extensions to PECL:
  . ext/cpdf        (Tony, Derick)
  . ext/dio         (Jani, Derick)
  . ext/fam         (Jani, Derick)
  . ext/mnogosearch (Jani, Derick)
  . ext/w32api      (Jani, Derick)
  . ext/yp          (Jani, Derick)
- Changed stream_filter_(ap|pre)pend() to return resource. (Sara)
- Changed mysqli_exception and sqlite_exception to use RuntimeException as base 
  if SPL extension is present. (Georg, Marcus)
- Removed garbage manager in Zend Engine which results in more aggressive
  freeing of data. (Dmitry, Andi)
- Improved support for embedded server in mysqli. (Georg)
- Improved performance of:
  . general execution/compilation. (Andi, Thies, Sterling, Dmitry, Marcus)
  . switch() statement. (Dmitry)
  . several array functions. (Marcus)
  . virtual path handling by adding a realpath() cache. (Andi)
  . variable fetches. (Andi)
  . magic method invocations. (Marcus)
- Improved extension SPL (Marcus).
  . added standard hierarchy of Exception classes
  . added interface Countable
  . added interfaces Subject and Observer
  . added spl_autoload*() functions
  . converted several 5.0 examples into c code
  . added class File
- Added optional first parameter to XsltProcessor::registerPHPFunctions to only  
  allow certain functions to be called from XSLT. (Christian)
- Added the ability to override the autotools executables used by the buildconf
  script via the PHP_AUTOCONF and PHP_AUTOHEADER environmental variables. (Jon)
- Added several new functions to support the PostgreSQL v3 protocol introduced 
  in PostgreSQL 7.4. (Christopher)
  . pg_transaction_status() - in-transaction status of a database connection.
  . pg_query_params() - execution of parameterized queries.
  . pg_prepare() - prepare named queries.
  . pg_execute() - execution of named prepared queries.
  . pg_send_query_params() - async equivalent of pg_query_params().